@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+
+Name: libIDL
+Description: IDL parsing library
+Version: @VERSION@
+Requires: glib-2.0
+Libs: -L${libdir} -lIDL-2
+Cflags: -I${includedir}
